--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="school-budge-area">
-            <img src="static/images/logo.png" class="school-budge" alt="EHR Logo" />
+            <img src="static/images/logo.jpg" class="school-budge" alt="EHR Logo" />
             <h1 class="school-name">EHR Information System</h1>
         </div>
         <nav class="navigation-area">
