--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10954,6 +10954,8 @@ header.masthead {
   background-size: cover;
 }
 header.masthead .masthead-subheading {
+  color: crimson;
+  background-color: #dee2e6;
   font-size: 1.5rem;
   font-style: italic;
   line-height: 1.5rem;
