--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor Dashboard</title>
-    <link rel="icon" href="static/images/logo.jpg" type="image/x-icon" />
+    <title>Doctor's Login</title>
+    <link href="/static/css/styles.css" rel="stylesheet" />
+    <link rel="icon" href="/static/assets/img/elehere-log.jpg" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="static/custom.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link rel="stylesheet" href="/static/custom.css">
 </head>
 <body>
     <!-- Navbar -->
     <header class="navbar navbar-expand-lg navbar-dark sticky-top" id="mainNav">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="color:#ffc800; font-family:'Courier New', Courier, monospace;">
+                <img src="/static/assets/img/elehere-log.jpg" alt="ELEHERE Logo" style="height: 40px; width: auto; margin-right: 10px;">
                 ELEHERE
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
