--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor Registration</title>
     <link href="/static/css/styles.css" rel="stylesheet" />
-    <link rel="icon" href="/static/images/logo.jpg" type="image/x-icon" />
+    <link rel="icon" href="/static/assets/img/elehere-log.jpg" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/custom.css">
     <style>
@@ -43,15 +43,19 @@
     <!-- Navigation Header -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">ELEHERE</a>
+            <a class="navbar-brand" href="#page-top">
+                <img src="/static/assets/img/elehere-log.jpg" alt="ELEHERE Logo" style="height: 40px; width: auto; margin-right: 10px;">
+                ELEHERE
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars ms-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
                 </ul>
             </div>
         </div>
