added logout confirmations and creation of about page on register html,routing

--- a/templates/about.html
+++ b/templates/about.html
@@ -101,9 +101,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#info">EHR Info</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}" data-bs-toggle="modal" data-bs-target="#logoutModal">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+                    
                 </ul>
             </div>
         </div>
