--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
                     <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About Us</a></li>
                 </ul>
             </div>
         </div>
